@@ -19,9 +19,6 @@
 double sp_desktop_free_snap (SPDesktop const *desktop, NR::Point &req);
 double sp_desktop_vector_snap (SPDesktop const *desktop, NR::Point &req, NR::Point const &d);
 
-gdouble sp_desktop_horizontal_snap(SPDesktop const *dt, NR::Point* req);
-
-gdouble sp_desktop_vertical_snap(SPDesktop const *dt, NR::Point* req);
 gdouble sp_desktop_dim_snap(SPDesktop const *dt, NR::Point& req, unsigned const dim);
 
 /* List of points methods */
@@ -43,11 +40,6 @@ double sp_desktop_dim_snap_list_skew(SPDesktop const *desktop, NR::Point const p
 double sp_desktop_dim_snap_list(SPDesktop const *desktop, NR::Point const p[], int const length,
 				double const dx, unsigned const dim);
 
-double sp_desktop_horizontal_snap_list_scale(SPDesktop const *desktop, NR::Point const p[], int const length, NR::Point const norm, double const sx);
-double sp_desktop_vertical_snap_list_scale(SPDesktop const *desktop, NR::Point const p[], int const length, NR::Point const norm, double const sx);
-
-double sp_desktop_horizontal_snap_list_skew(SPDesktop const *desktop, NR::Point const p[], int const length, NR::Point const norm, double const sx);
-double sp_desktop_vertical_snap_list_skew(SPDesktop const *desktop, NR::Point const p[], int const length, NR::Point const norm, double const sx);
 
 /* Single point methods */
 double sp_desktop_free_snap (SPDesktop const *desktop, NR::Point *req);
